--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "query = '''SELECT '''"
+    "query = '''SELECT firstName, '''"
    ]
   },
   {
