Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,9 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "query = '''SELECT firstName, '''"
+    "query = '''SELECT firstName, lastName, \n",
+    "\n",
+    "'''"
    ]
   },
   {
