Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "query = '''SELECT firstName, lastName, \n",
+    "query = '''SELECT firstName, lastName, city, s \n",
     "\n",
     "'''"
    ]
