--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "query = '''SELECT firstName, lastName, city, s \n",
+    "query = '''SELECT firstName, lastName, city, state\n",
+    "        \n",
     "\n",
     "'''"
    ]
