--- a/index.ipynb
+++ b/index.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "#Your code here\n",
     "query = '''SELECT firstName, lastName, city, state\n",
-    "        \n",
+    "        FROM \n",
     "\n",
     "'''"
    ]
