Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,8 +61,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "query = '''SELECT firstName, lastName, city, state\n",
-    "        FROM EMPLOYEE.\n",
+    "query = '''SELECT EMPfirstName, lastName, city, state\n",
+    "        FROM EMPLOYEES.\n",
     "\n",
     "'''"
    ]
