Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "query = '''SELECT EMPLOYEES.firstName, EMPLOYEES.lastName, city, state\n",
+    "query = '''SELECT EMPLOYEES.firstName, EMPLOYEES.lastName, \n",
+    "                OFFICEcity, state\n",
     "        FROM EMPLOYEES.\n",
     "\n",
     "'''"
