--- a/index.ipynb
+++ b/index.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "#Your code here\n",
     "query = '''SELECT EMPLOYEES.firstName, EMPLOYEES.lastName, \n",
-    "                OFFICEcity, state\n",
+    "                OFFICES.city, state\n",
     "        FROM EMPLOYEES.\n",
     "\n",
     "'''"
