--- a/index.ipynb
+++ b/index.ipynb
@@ -62,7 +62,8 @@
    "source": [
     "#Your code here\n",
     "query = '''\n",
-    "SELECT EMPLOYEES.firstName, EMPLOYEES.lastName, \n",
+    "SELECT \n",
+    "    EMPLOYEES.firstName, EMPLOYEES.lastName, \n",
     "                OFFICES.city, state\n",
     "        FROM EMPLOYEES.\n",
     "\n",
