Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -63,8 +63,10 @@
     "#Your code here\n",
     "query = '''\n",
     "SELECT \n",
-    "    EMPLOYEES.firstName, EMPLOYEES.lastName, \n",
-    "                OFFICES.city, state\n",
+    "    EMPLOYEES.firstName, \n",
+    "    EMPLOYEES.lastName, \n",
+    "    OFFICES.city, \n",
+    "    state\n",
     "        FROM EMPLOYEES.\n",
     "\n",
     "'''"
