Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -66,8 +66,8 @@
     "    EMPLOYEES.firstName, \n",
     "    EMPLOYEES.lastName, \n",
     "    OFFICES.city, \n",
-    "    state\n",
-    "        FROM EMPLOYEES.\n",
+    "    OFFICES.state\n",
+    "FROM EMPLOYEES.\n",
     "\n",
     "'''"
    ]
