--- a/index.ipynb
+++ b/index.ipynb
@@ -67,8 +67,7 @@
     "    EMPLOYEES.lastName, \n",
     "    OFFICES.city, \n",
     "    OFFICES.state\n",
-    "FROM EMPLOYEES.officeCode ON OFFICES.office\n",
-    "\n",
+    "FROM EMPLOYEES.officeCode ON OFFICES.officeCode\n",
     "'''"
    ]
   },
