Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -63,7 +63,7 @@
     "#Your code here\n",
     "query = '''\n",
     "SELECT \n",
-    "    EMPLOYEES.firstName, \n",
+    "    employees.firstName, \n",
     "    EMPLOYEES.lastName, \n",
     "    OFFICES.city, \n",
     "    OFFICES.state\n",
