Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,7 @@
     "    EMPLOYEES.lastName, \n",
     "    OFFICES.city, \n",
     "    OFFICES.state\n",
-    "FROM EMPLOYEES.officeCode ON OFFICES.officeCode\n",
+    "FROM EMPLOYEE ON OFFICES.officeCode\n",
     "'''"
    ]
   },
