--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,7 @@
     "    EMPLOYEES.lastName, \n",
     "    OFFICES.city, \n",
     "    OFFICES.state\n",
-    "FROM employees ON OFFICES.officeCode\n",
+    "FROM employees join offices on ON OFFICES.officeCode\n",
     "'''"
    ]
   },
