Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,8 @@
     "    EMPLOYEES.lastName, \n",
     "    OFFICES.city, \n",
     "    OFFICES.state\n",
-    "FROM employees join offices on offices.officeCode\n",
+    "FROM employees join offices \n",
+    "ON offices.officeCode\n",
     "'''"
    ]
   },
