Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,7 @@
     "    EMPLOYEES.lastName, \n",
     "    OFFICES.city, \n",
     "    OFFICES.state\n",
-    "FROM employees join offices \n",
+    "FROM employees JOIN offices \n",
     "ON offices.officeCode\n",
     "'''"
    ]
