--- a/index.ipynb
+++ b/index.ipynb
@@ -68,7 +68,7 @@
     "    OFFICES.city, \n",
     "    OFFICES.state\n",
     "FROM employees JOIN offices \n",
-    "ON offices.officeCode\n",
+    "ON employees.officeOoffices.officeCode\n",
     "'''"
    ]
   },
