--- a/index.ipynb
+++ b/index.ipynb
@@ -60,6 +60,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "conn = sqlite3.connect('data.sqlite', detect_types=sqlite3.PARSE_COLNAMES)\n",
+    "cur = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Your code here\n",
     "query = '''\n",
     "SELECT \n",
