Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
     "    OFFICES.city, \n",
     "    OFFICES.state\n",
     "FROM employees JOIN offices \n",
-    "ON employees.officeOffice = offices.officeCode\n",
+    "ON employees.officeCode= offices.officeCode\n",
     "'''"
    ]
   },
