Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,7 @@
     "#Your code here\n",
     "query = '''\n",
     "SELECT \n",
-    "    employees.firstName, \n",
+    "    employees.firstName \n",
     "    EMPLOYEES.lastName, \n",
     "    OFFICES.city, \n",
     "    OFFICES.state\n",
