--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,7 @@
     "query = '''\n",
     "SELECT \n",
     "    employees.firstName \n",
-    "    EMPLOYEES.lastName, \n",
+    ", EMPLOYEES.lastName, \n",
     "    OFFICES.city, \n",
     "    OFFICES.state\n",
     "FROM employees JOIN offices \n",
