Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,9 +76,10 @@
     "#Your code here\n",
     "query = '''\n",
     "SELECT \n",
-    "    employees.firstName \n",
-    ", EMPLOYEES.lastName, \n",
-    "    OFFICES.city, \n",
+    "  employees.firstName \n",
+    ", EMPLOYEES.lastName\n",
+    ", OFFICES.city\n",
+    ", \n",
     "    OFFICES.state\n",
     "FROM employees JOIN offices \n",
     "ON employees.officeCode = offices.officeCode\n",
