Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -79,9 +79,9 @@
     "  employees.firstName \n",
     ", EMPLOYEES.lastName\n",
     ", OFFICES.city\n",
-    ", \n",
-    "    OFFICES.state\n",
-    "FROM employees JOIN offices \n",
+    ", OFFICES.state\n",
+    "FROM employees \n",
+    "JOIN offices \n",
     "ON employees.officeCode = offices.officeCode\n",
     "'''"
    ]
