Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -80,8 +80,10 @@
     ", EMPLOYEES.lastName\n",
     ", OFFICES.city\n",
     ", OFFICES.state\n",
-    "FROM employees \n",
-    "JOIN offices \n",
+    "FROM \n",
+    "  employees \n",
+    "JOIN \n",
+    "  offices \n",
     "ON employees.officeCode = offices.officeCode\n",
     "'''"
    ]
