--- a/index.ipynb
+++ b/index.ipynb
@@ -99,10 +99,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('firstName', None, None, None, None, None, None),\n",
+       " ('lastName', None, None, None, None, None, None),\n",
+       " ('city', None, None, None, None, None, None),\n",
+       " ('state', None, None, None, None, None, None))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.description"
+   ]
   },
   {
    "cell_type": "markdown",
