Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -99,25 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(('firstName', None, None, None, None, None, None),\n",
-       " ('lastName', None, None, None, None, None, None),\n",
-       " ('city', None, None, None, None, None, None),\n",
-       " ('state', None, None, None, None, None, None))"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "result_data = "
+    "result_data = list(result)"
    ]
   },
   {
