--- a/index.ipynb
+++ b/index.ipynb
@@ -108,11 +108,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Diane', 'Murphy', 'San Francisco', 'CA'),\n",
+       " ('Mary', 'Patterson', 'San Francisco', 'CA'),\n",
+       " ('Jeff', 'Firrelli', 'San Francisco', 'CA'),\n",
+       " ('William', 'Patterson', 'Sydney', ''),\n",
+       " ('Gerard', 'Bondur', 'Paris', ''),\n",
+       " ('Anthony', 'Bow', 'San Francisco', 'CA'),\n",
+       " ('Leslie', 'Jennings', 'San Francisco', 'CA'),\n",
+       " ('Leslie', 'Thompson', 'San Francisco', 'CA'),\n",
+       " ('Julie', 'Firrelli', 'Boston', 'MA'),\n",
+       " ('Steve', 'Patterson', 'Boston', 'MA'),\n",
+       " ('Foon Yue', 'Tseng', 'NYC', 'NY'),\n",
+       " ('George', 'Vanauf', 'NYC', 'NY'),\n",
+       " ('Loui', 'Bondur', 'Paris', ''),\n",
+       " ('Gerard', 'Hernandez', 'Paris', ''),\n",
+       " ('Pamela', 'Castillo', 'Paris', ''),\n",
+       " ('Larry', 'Bott', 'London', ''),\n",
+       " ('Barry', 'Jones', 'London', ''),\n",
+       " ('Andy', 'Fixter', 'Sydney', ''),\n",
+       " ('Peter', 'Marsh', 'Sydney', ''),\n",
+       " ('Tom', 'King', 'Sydney', ''),\n",
+       " ('Mami', 'Nishi', 'Tokyo', 'Chiyoda-Ku'),\n",
+       " ('Yoshimi', 'Kato', 'Tokyo', 'Chiyoda-Ku'),\n",
+       " ('Martin', 'Gerard', 'Paris', '')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "resul"
+    "result_data"
    ]
   },
   {
