--- a/index.ipynb
+++ b/index.ipynb
@@ -150,11 +150,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('firstName', 'lastName', 'city', 'state'),\n",
+       " (None, None, None, None),\n",
+       " (None, None, None, None),\n",
+       " (None, None, None, None),\n",
+       " (None, None, None, None),\n",
+       " (None, None, None, None),\n",
+       " (None, None, None, None)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "list(zip())"
+    "list(zip(*result.description))"
    ]
   },
   {
