Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -150,28 +150,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('firstName', 'lastName', 'city', 'state'),\n",
-       " (None, None, None, None),\n",
-       " (None, None, None, None),\n",
-       " (None, None, None, None),\n",
-       " (None, None, None, None),\n",
-       " (None, None, None, None),\n",
-       " (None, None, None, None)]"
+       "('firstName', 'lastName', 'city', 'state')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(zip(*result.description))"
+    "list(zip(*result.description))[0]"
    ]
   },
   {
