Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -170,6 +170,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[row[0] for]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
