Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -170,11 +170,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['firstName', 'lastName', 'city', 'state']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "[row[0] for row in result.]"
+    "[row[0] for row in result.description]"
    ]
   },
   {
