--- a/index.ipynb
+++ b/index.ipynb
@@ -170,22 +170,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['firstName', 'lastName', 'city', 'state']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "[row[0] for row in result.description]"
+    "columns = [row[0] for row in result.description]"
    ]
   },
   {
