--- a/index.ipynb
+++ b/index.ipynb
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = [row[0] for row in result.description]"
+    "col = [row[0] for row in result.description]"
    ]
   },
   {
@@ -195,7 +195,7 @@
     }
    ],
    "source": [
-    "pd.DataFrame(result_data, colums=colums)"
+    "pd.DataFrame(result_data, colums=columns)"
    ]
   },
   {
