--- a/index.ipynb
+++ b/index.ipynb
@@ -85,6 +85,8 @@
     "JOIN \n",
     "  offices \n",
     "  ON employees.officeCode = offices.officeCode\n",
+    "ORDER BY\n",
+    "   \n",
     "'''"
    ]
   },
