Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,13 +86,13 @@
     "  offices \n",
     "  ON employees.officeCode = offices.officeCode\n",
     "ORDER BY\n",
-    "   \n",
+    "  firstName, lastName\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
