Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -429,7 +429,9 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "qu"
+    "query = '''\n",
+    "\n",
+    "'''"
    ]
   },
   {
