Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -430,7 +430,18 @@
    "source": [
     "# Your code here\n",
     "query = '''\n",
-    "SELECT \n",
+    "SELECT\n",
+    "  employees.firstName \n",
+    ", EMPLOYEES.lastName\n",
+    ", OFFICES.city\n",
+    ", OFFICES.state\n",
+    "FROM \n",
+    "  employees \n",
+    "JOIN \n",
+    "  offices \n",
+    "  ON employees.officeCode = offices.officeCode\n",
+    "ORDER BY\n",
+    "  firstName, lastName\n",
     "'''"
    ]
   },
