Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -433,7 +433,7 @@
     "SELECT\n",
     "  *\n",
     "FROM \n",
-    "  employees \n",
+    "  customer \n",
     "JOIN \n",
     "  offices \n",
     "  ON employees.officeCode = offices.officeCode\n",
